--- a/index.html
+++ b/index.html
@@ -7,7 +7,8 @@ meta-title: "Dean Attali - R-Shiny consultant"
 meta-description: "R-Shiny developer and consultant with a MSc in Bioinformatics and a Bachelor of Computer Science. Previously a software engineer at Google, IBM, and Wish.com."
 datacampcourse: true
 bigimg:
-  - "/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
+  - "tree.jpeg" : "Lorelei, Deutches Ecke (2011)"
+  <!-- - "/img/big-imgs/costa-rica-house.jpeg" : "Montezuma, Costa Rica (2011)"
   - "/img/big-imgs/grouse-grind.jpeg" : "Vancouver, Canada (2014)"
   - "/img/big-imgs/hawaii1.jpeg" : "Kauai, HI, USA (2014)"
   - "/img/big-imgs/hawaii2.jpeg" : "Kauai, HI, USA (2014)"
@@ -45,7 +46,7 @@ bigimg:
   - "/img/big-imgs/delft-duck.jpg" : "Delft, Netherlands (2017)"  
   - "/img/big-imgs/israel-camel.jpg" : "Arad, Israel (2018)"  
   - "/img/big-imgs/israel-haifa.jpg" : "Haifa, Israel (2018)"  
-  - "/img/big-imgs/maui-volcano.jpg" : "Maui, HI, USA (2018)"  
+  - "/img/big-imgs/maui-volcano.jpg" : "Maui, HI, USA (2018)"  -->
 ---
 
 <div class="list-filters">
