--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 layout: page
 title: "Hi, I'm Dean"
 subtitle: R-Shiny Expert / Software Tool Builder / Extreme Traveller
-<!--css: "/css/index.css"-->
+css: "/css/index.css"
 meta-title: "Dean Attali - R-Shiny consultant"
 meta-description: "R-Shiny developer and consultant with a MSc in Bioinformatics and a Bachelor of Computer Science. Previously a software engineer at Google, IBM, and Wish.com."
 bigimg:
@@ -54,8 +54,6 @@ bigimg:
   <a href="/tutorials" class="list-filter">Tutorials</a>
   <a href="/tags" class="list-filter">Index</a>
 </div>
-
-{% include datacamp_course_promo.html %}
 
 <div class="posts-list">
   {% for post in paginator.posts %}
