--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 ---
 layout: page
 title: Tyler Frazier
-subtitle: Lecturer of Interdisciplinary Studies <br> Data Science Program <br> William & Mary
+subtitle: Lecturer of Data Science <br> William & Mary
 css: "/css/index.css"
 ---
 
