--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@ css: "/css/index.css"
   margin-bottom: 15px;
   text-align: center;">
 	
-Teaching
+<h1 style="text-align:center"> Teaching </h1>
 	
 </p>
 
@@ -39,6 +39,6 @@ Teaching
   {% endfor %}
 </div>
 
-<h1> Publications </h1>
+<h1 style="text-align:center"> Publications </h1>
 
 
