--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ subtitle: Lecturer of Data Science <br> William & Mary
 css: "/css/index.css"
 ---
 	
-<h1 style="text-align:center"> Teaching </h1>
+<h1 style="text-align:center"> Current Cources </h1>
 
 <div class="posts-list">
   {% for post in paginator.posts %}
